--- a/hackathon-frontend/src/app/admin/view-hackathons/view-hackathons.component.html
+++ b/hackathon-frontend/src/app/admin/view-hackathons/view-hackathons.component.html
@@ -5,15 +5,15 @@
         <div class="hackathon-item">
           <h3>{{ hackathon.name }}</h3>
           <p><strong>Theme:</strong> {{ hackathon.theme }}</p>
-          <p><strong>Registration Dates:</strong> {{ hackathon.registrationDateRange }}</p>
-          <p><strong>Event Date:</strong> {{ hackathon.eventDate }}</p>
+          <p><strong>Registration Dates:</strong> {{ hackathon.registration_date_range }}</p>
+          <p><strong>Event Date:</strong> {{ hackathon.event_date }}</p>
           <p><strong>Challenges:</strong></p>
           <ul>
             <li *ngFor="let challenge of hackathon.challenges">{{ challenge }}</li>
           </ul>
-          <p><strong>Maximum Team Size:</strong> {{ hackathon.maxTeamSize }}</p>
-          <p><strong>Maximum Number of Teams:</strong> {{ hackathon.maxTeams }}</p>
-          <button (click)="registerForHackathon(hackathon)">Register</button>
+          <p><strong>Maximum Team Size:</strong> {{ hackathon.max_team_size }}</p>
+          <p><strong>Maximum Number of Teams:</strong> {{ hackathon.max_teams }}</p>
+          <!-- Add any other properties as needed -->
         </div>
       </li>
     </ul>
