--- a/hackathon-frontend/src/app/app.component.html
+++ b/hackathon-frontend/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-view-hackathons></app-view-hackathons>
+<!-- <app-view-hackathons></app-view-hackathons> -->
+<app-competitor-signup></app-competitor-signup>
