backend fixes and FE backup

--- a/hackathon-frontend/src/app/app.component.html
+++ b/hackathon-frontend/src/app/app.component.html
@@ -1,2 +1,8 @@
 <!-- <app-view-hackathons></app-view-hackathons> -->
-<app-competitor-signup></app-competitor-signup>
+<!-- <app-competitor-signup></app-competitor-signup>
+ -->
+<!-- <app-competitor-login></app-competitor-login>
+ -->
+ <router-outlet></router-outlet>
+
+ <app-footer></app-footer>
